--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "astro": "^4.2.4",
+    "swiper": "^11.0.5",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
