--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.0.9",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swiper": "^11.0.5",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
